[package]
name = "masteringutil"
version = "2.0.0"
edition = "2021"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "masteringutil"
path = "src/lib.rs"

[[bin]]
name = "MasteringUtility"
path = "src/launcher/main.rs"

[[bin]]
name = "MasteringWizard"
path = "src/wizard/main.rs"
