[package]
name = "masteringutil"
version = "2.0.0"
edition = "2021"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "masteringutil-rs"
path = "src/backend/rs/lib.rs"

[[bin]]
name = "MasteringUtility"
path = "src/frontend/launcher/rs/launcher.rs"

[[bin]]
name = "MasteringWizard"
path = "src/frontend/wizard/rs/wizard.rs"
